# pacs008-loader-mt103

./: CHANGELOG.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_minimal_parse.py  02_validate_against_pacs008.py
pacs008_loader_mt103/: __init__.py  loader.py
releases/: v0.0.1.md  v0.0.2.md
tests/: test_loader.py
